tests/samples/negative/types/array_repeat_value_type_mismatch.ax
module array_repeat_value_type_mismatch;

fn main() -> i32 {
    let values: [2]u8 = [300; 2];
    return ((values[0]) as i32);
}
